--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -19,7 +19,7 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
+  	{
       "cell_type": "markdown",
       "metadata": {
         "id": "view-in-github",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tZVo_WbiybMh",
-        "outputId": "f1dc5bd6-c124-4636-9141-7a2a9db254dd"
+        "outputId": "0f9e6bd0-8d05-4b75-f51f-74e90f6ef408"
       },
       "source": [
         "# import the necessary packages\n",
@@ -115,10 +115,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
             "[INFO] training perceptron...\n"
-          ]
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u498GDd454K3",
-        "outputId": "fce79103-6e61-48a5-c40d-df8e131d294b"
+        "outputId": "5fffae0d-1e78-4c3b-ae61-d16d4daa630b"
       },
       "source": [
         "# now that our perceptron is trained we can evaluate it\n",
@@ -146,10 +146,14 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "[INFO] testing perceptron...\n[INFO] data=[0 0], ground-truth=0, pred=0\n[INFO] data=[0 1], ground-truth=1, pred=1\n[INFO] data=[1 0], ground-truth=1, pred=1\n[INFO] data=[1 1], ground-truth=1, pred=1\n"
-          ]
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=0, pred=0\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 1], ground-truth=1, pred=1\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -160,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-PErebzuKrl",
-        "outputId": "ba95e656-8aae-48bd-a176-542cbd7ec156"
+        "outputId": "e207cce0-83f8-44ea-db2d-084f7762219f"
       },
       "source": [
         "# AND\n",
@@ -205,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OC5fG9m8uMD2",
-        "outputId": "f9a44d9b-2995-43ec-e424-dad0397a2a27"
+        "outputId": "032e2e76-8aff-431d-935d-aeef9a292960"
       },
       "source": [
         "# construct the XOR dataset\n",
@@ -234,9 +238,87 @@
             "[INFO] training perceptron...\n",
             "[INFO] testing perceptron...\n",
             "[INFO] data=[0 0], ground-truth=0, pred=1\n",
-            "[INFO] data=[0 1], ground-truth=1, pred=0\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
             "[INFO] data=[1 0], ground-truth=1, pred=0\n",
             "[INFO] data=[1 1], ground-truth=0, pred=0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hpSgZsq-wTyB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2c54e3c3-16c0-4cf1-8668-9f94cace26b7"
+      },
+      "source": [
+        "# NAND\n",
+        "# importing Python library\n",
+        "# import numpy as np\n",
+        "  \n",
+        "# define Unit Step Function\n",
+        "def unitStep(v):\n",
+        "    if v >= 0:\n",
+        "        return 1\n",
+        "    else:\n",
+        "        return 0\n",
+        "  \n",
+        "# design Perceptron Model\n",
+        "def perceptronModel(x, w, b):\n",
+        "    v = np.dot(w, x) + b\n",
+        "    y = unitStep(v)\n",
+        "    return y\n",
+        "  \n",
+        "# NOT Logic Function\n",
+        "# wNOT = -1, bNOT = 0.5\n",
+        "def NOT_logicFunction(x):\n",
+        "    wNOT = -1\n",
+        "    bNOT = 0.5\n",
+        "    return perceptronModel(x, wNOT, bNOT)\n",
+        "  \n",
+        "# AND Logic Function\n",
+        "# w1 = 1, w2 = 1, bAND = -1.5\n",
+        "def AND_logicFunction(x):\n",
+        "    w = np.array([1, 1])\n",
+        "    bAND = -1.5\n",
+        "    return perceptronModel(x, w, bAND)\n",
+        "  \n",
+        "print(\"[INFO] training perceptron...\")\n",
+        "# NAND Logic Function\n",
+        "# with AND and NOT  \n",
+        "# function calls in sequence\n",
+        "def NAND_logicFunction(x):\n",
+        "    output_AND = AND_logicFunction(x)\n",
+        "    output_NOT = NOT_logicFunction(output_AND)\n",
+        "    return output_NOT\n",
+        "\n",
+        "print(\"[INFO] testing perceptron...\")\n",
+        "# testing the Perceptron Model\n",
+        "test1 = np.array([0, 1])\n",
+        "test2 = np.array([1, 1])\n",
+        "test3 = np.array([0, 0])\n",
+        "test4 = np.array([1, 0])\n",
+        "  \n",
+        "print(\"NAND({}, {}) = {}\".format(0, 1, NAND_logicFunction(test1)))\n",
+        "print(\"NAND({}, {}) = {}\".format(1, 1, NAND_logicFunction(test2)))\n",
+        "print(\"NAND({}, {}) = {}\".format(0, 0, NAND_logicFunction(test3)))\n",
+        "print(\"NAND({}, {}) = {}\".format(1, 0, NAND_logicFunction(test4)))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[INFO] training perceptron...\n",
+            "[INFO] testing perceptron...\n",
+            "NAND(0, 1) = 1\n",
+            "NAND(1, 1) = 0\n",
+            "NAND(0, 0) = 1\n",
+            "NAND(1, 0) = 1\n"
           ],
           "name": "stdout"
         }
