--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -241,6 +241,18 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# AND\n",
+        "# construct the AND dataset\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([[0], [0], [0], [1]])\n"
+      ]
     }
   ]
 }
