--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -19,7 +19,7 @@
     "accelerator": "GPU"
   },
   "cells": [
-  	{
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "view-in-github",
@@ -96,7 +96,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tZVo_WbiybMh",
-        "outputId": "0f9e6bd0-8d05-4b75-f51f-74e90f6ef408"
+        "outputId": "f1dc5bd6-c124-4636-9141-7a2a9db254dd"
       },
       "source": [
         "# import the necessary packages\n",
@@ -115,10 +115,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[INFO] training perceptron...\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u498GDd454K3",
-        "outputId": "5fffae0d-1e78-4c3b-ae61-d16d4daa630b"
+        "outputId": "fce79103-6e61-48a5-c40d-df8e131d294b"
       },
       "source": [
         "# now that our perceptron is trained we can evaluate it\n",
@@ -146,14 +146,10 @@
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[INFO] testing perceptron...\n",
-            "[INFO] data=[0 0], ground-truth=0, pred=0\n",
-            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
-            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
-            "[INFO] data=[1 1], ground-truth=1, pred=1\n"
-          ],
-          "name": "stdout"
+            "[INFO] testing perceptron...\n[INFO] data=[0 0], ground-truth=0, pred=0\n[INFO] data=[0 1], ground-truth=1, pred=1\n[INFO] data=[1 0], ground-truth=1, pred=1\n[INFO] data=[1 1], ground-truth=1, pred=1\n"
+          ]
         }
       ]
     },
@@ -164,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-PErebzuKrl",
-        "outputId": "e207cce0-83f8-44ea-db2d-084f7762219f"
+        "outputId": "ba95e656-8aae-48bd-a176-542cbd7ec156"
       },
       "source": [
         "# AND\n",
@@ -209,7 +205,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OC5fG9m8uMD2",
-        "outputId": "032e2e76-8aff-431d-935d-aeef9a292960"
+        "outputId": "f9a44d9b-2995-43ec-e424-dad0397a2a27"
       },
       "source": [
         "# construct the XOR dataset\n",
@@ -238,17 +234,12 @@
             "[INFO] training perceptron...\n",
             "[INFO] testing perceptron...\n",
             "[INFO] data=[0 0], ground-truth=0, pred=1\n",
-            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=0\n",
             "[INFO] data=[1 0], ground-truth=1, pred=0\n",
             "[INFO] data=[1 1], ground-truth=0, pred=0\n"
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-
       ]
     }
   ]
