--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "perceptron_1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPDlBIKsk2izOCWIhEp5Wi9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Abdel-rahim/preceptron_test/blob/main/perceptron_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/rahmaahassan/preceptron_test/blob/main/perceptron_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -95,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tZVo_WbiybMh",
-        "outputId": "f1dc5bd6-c124-4636-9141-7a2a9db254dd"
+        "outputId": "a2ca45b8-2742-4756-c7e5-2d323f580d4f"
       },
       "source": [
         "# import the necessary packages\n",
@@ -129,7 +128,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u498GDd454K3",
-        "outputId": "fce79103-6e61-48a5-c40d-df8e131d294b"
+        "outputId": "57c95d2a-32a6-48c2-8e90-fec9e8ccb63c"
       },
       "source": [
         "# now that our perceptron is trained we can evaluate it\n",
@@ -164,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-PErebzuKrl",
-        "outputId": "ba95e656-8aae-48bd-a176-542cbd7ec156"
+        "outputId": "7a464382-8c1a-4c98-9c44-9969f5f3ebaa"
       },
       "source": [
         "# AND\n",
@@ -209,7 +208,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OC5fG9m8uMD2",
-        "outputId": "f9a44d9b-2995-43ec-e424-dad0397a2a27"
+        "outputId": "7fe7456d-0c57-4cf5-e1ea-b20e2bff1b54"
       },
       "source": [
         "# construct the XOR dataset\n",
@@ -240,6 +239,46 @@
             "[INFO] data=[0 0], ground-truth=0, pred=1\n",
             "[INFO] data=[0 1], ground-truth=1, pred=0\n",
             "[INFO] data=[1 0], ground-truth=1, pred=0\n",
+            "[INFO] data=[1 1], ground-truth=0, pred=0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wbjtVSUTlGBd",
+        "outputId": "45010586-e817-46b9-9fc7-30da0d1f14f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# construct the NAND dataset\n",
+        "A = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "b = np.array([[1], [1], [1], [0]])\n",
+        "\n",
+        "print(\"[INFO] training perceptron...\")\n",
+        "p = Perceptron(A.shape[1], alpha=0.1)\n",
+        "\n",
+        "p.fit(A, b, epochs=20)\n",
+        "print(\"[INFO] testing perceptron...\")\n",
+        "\n",
+        "for (x, target) in zip(A, b):\n",
+        "    pred = p.predict(x)\n",
+        "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[INFO] training perceptron...\n",
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
             "[INFO] data=[1 1], ground-truth=0, pred=0\n"
           ],
           "name": "stdout"
