--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -241,6 +241,50 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FLTuyPG5Pv9W",
+        "outputId": "bef24731-ea0e-4822-feff-80fdd659afae"
+      },
+      "source": [
+        "# construct the NAND dataset\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([[1], [1], [1], [0]])\n",
+        "# define our perceptron and train it\n",
+        "print(\"[INFO] training perceptron...\")\n",
+        "p = Perceptron(X.shape[1], alpha=0.1)\n",
+        "p.fit(X, y, epochs=20)\n",
+        "\n",
+        "# now that our perceptron is trained we can evaluate it\n",
+        "print(\"[INFO] testing perceptron...\")\n",
+        "\n",
+        "# now that our network is trained, loop over the data points\n",
+        "for (x, target) in zip(X, y):\n",
+        "    # make a prediction on the data point and display the result\n",
+        "    # to our console\n",
+        "    pred = p.predict(x)\n",
+        "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[INFO] training perceptron...\n",
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 1], ground-truth=0, pred=0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
