--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rahmaahassan/preceptron_test/blob/main/perceptron_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EslaM-AhMed14/preceptron_test/blob/main/perceptron_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -85,7 +85,7 @@
         "      # function\n",
         "      return self.step(np.dot(X, self.W))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,14 +110,14 @@
         "p = Perceptron(X.shape[1], alpha=0.1)\n",
         "p.fit(X, y, epochs=20)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
             "[INFO] training perceptron...\n"
-          ]
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -141,14 +141,18 @@
         "  pred = p.predict(x)\n",
         "  print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "[INFO] testing perceptron...\n[INFO] data=[0 0], ground-truth=0, pred=0\n[INFO] data=[0 1], ground-truth=1, pred=1\n[INFO] data=[1 0], ground-truth=1, pred=1\n[INFO] data=[1 1], ground-truth=1, pred=1\n"
-          ]
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=0, pred=0\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 1], ground-truth=1, pred=1\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -181,7 +185,7 @@
         "    pred = p.predict(x)\n",
         "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +229,7 @@
         "    pred = p.predict(x)\n",
         "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,10 +249,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wbjtVSUTlGBd",
-        "outputId": "45010586-e817-46b9-9fc7-30da0d1f14f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "45010586-e817-46b9-9fc7-30da0d1f14f1"
       },
       "source": [
         "# construct the NAND dataset\n",
@@ -265,7 +269,7 @@
         "    pred = p.predict(x)\n",
         "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,6 +284,31 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fliDEXg1jISQ"
+      },
+      "source": [
+        "# construct the NAND dataset\n",
+        "E = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "L = np.array([[1], [1], [1], [0]])\n",
+        "# define our perceptron and train it\n",
+        "print(\"[INFO] training perceptron...\")\n",
+        "p = Perceptron(E.shape[1], alpha=0.1)\n",
+        "\n",
+        "p.fit(E, L, epochs=20)\n",
+        "\n",
+        "print(\"[INFO] testing perceptron...\")\n",
+        "\n",
+        "\n",
+        "for (x, target) in zip(E, L):\n",
+        "    pred = p.predict(x)\n",
+        "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
