--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -208,7 +208,7 @@
         "outputId": "f9a44d9b-2995-43ec-e424-dad0397a2a27"
       },
       "source": [
-        "# construct the XOR dataset\n",
+        "# construct the NAND dataset\n",
         "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
         "y = np.array([[0], [1], [1], [0]])\n",
         "# define our perceptron and train it\n",
