--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -9,12 +9,11 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python379jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-      "display_name": "Python 3.7.9 64-bit ('base': conda)"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
-      "name": "python",
-      "version": "3.7.9"
+      "name": "python"
     },
     "accelerator": "GPU"
   },
@@ -100,6 +99,7 @@
       },
       "source": [
         "# import the necessary packages\n",
+        "# from pyimagesearch.nn import Perceptron\n",
         "# import numpy as np\n",
         "\n",
         "# construct the OR dataset\n",
@@ -115,10 +115,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
             "[INFO] training perceptron...\n"
-          ]
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -146,10 +146,14 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "[INFO] testing perceptron...\n[INFO] data=[0 0], ground-truth=0, pred=0\n[INFO] data=[0 1], ground-truth=1, pred=1\n[INFO] data=[1 0], ground-truth=1, pred=1\n[INFO] data=[1 1], ground-truth=1, pred=1\n"
-          ]
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=0, pred=0\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 1], ground-truth=1, pred=1\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -208,7 +212,7 @@
         "outputId": "f9a44d9b-2995-43ec-e424-dad0397a2a27"
       },
       "source": [
-        "# construct the NAND dataset\n",
+        "# construct the XOR dataset\n",
         "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
         "y = np.array([[0], [1], [1], [0]])\n",
         "# define our perceptron and train it\n",
@@ -236,6 +240,50 @@
             "[INFO] data=[0 0], ground-truth=0, pred=1\n",
             "[INFO] data=[0 1], ground-truth=1, pred=0\n",
             "[INFO] data=[1 0], ground-truth=1, pred=0\n",
+            "[INFO] data=[1 1], ground-truth=0, pred=0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FLTuyPG5Pv9W",
+        "outputId": "bef24731-ea0e-4822-feff-80fdd659afae"
+      },
+      "source": [
+        "# construct the NAND dataset\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([[1], [1], [1], [0]])\n",
+        "# define our perceptron and train it\n",
+        "print(\"[INFO] training perceptron...\")\n",
+        "p = Perceptron(X.shape[1], alpha=0.1)\n",
+        "p.fit(X, y, epochs=20)\n",
+        "\n",
+        "# now that our perceptron is trained we can evaluate it\n",
+        "print(\"[INFO] testing perceptron...\")\n",
+        "\n",
+        "# now that our network is trained, loop over the data points\n",
+        "for (x, target) in zip(X, y):\n",
+        "    # make a prediction on the data point and display the result\n",
+        "    # to our console\n",
+        "    pred = p.predict(x)\n",
+        "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[INFO] training perceptron...\n",
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
             "[INFO] data=[1 1], ground-truth=0, pred=0\n"
           ],
           "name": "stdout"
