--- a/perceptron_1.ipynb
+++ b/perceptron_1.ipynb
@@ -5,15 +5,15 @@
     "colab": {
       "name": "perceptron_1.ipynb",
       "provenance": [],
+      "authorship_tag": "ABX9TyPDlBIKsk2izOCWIhEp5Wi9",
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python379jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-      "display_name": "Python 3.7.9 64-bit ('base': conda)"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
-      "name": "python",
-      "version": "3.7.9"
+      "name": "python"
     },
     "accelerator": "GPU"
   },
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/rahmaahassan/preceptron_test/blob/main/perceptron_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Abdel-rahim/preceptron_test/blob/main/perceptron_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -95,10 +95,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tZVo_WbiybMh",
-        "outputId": "a2ca45b8-2742-4756-c7e5-2d323f580d4f"
+        "outputId": "f1dc5bd6-c124-4636-9141-7a2a9db254dd"
       },
       "source": [
         "# import the necessary packages\n",
+        "# from pyimagesearch.nn import Perceptron\n",
         "# import numpy as np\n",
         "\n",
         "# construct the OR dataset\n",
@@ -114,10 +115,10 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
             "[INFO] training perceptron...\n"
-          ]
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -128,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u498GDd454K3",
-        "outputId": "57c95d2a-32a6-48c2-8e90-fec9e8ccb63c"
+        "outputId": "fce79103-6e61-48a5-c40d-df8e131d294b"
       },
       "source": [
         "# now that our perceptron is trained we can evaluate it\n",
@@ -145,10 +146,14 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "[INFO] testing perceptron...\n[INFO] data=[0 0], ground-truth=0, pred=0\n[INFO] data=[0 1], ground-truth=1, pred=1\n[INFO] data=[1 0], ground-truth=1, pred=1\n[INFO] data=[1 1], ground-truth=1, pred=1\n"
-          ]
+            "[INFO] testing perceptron...\n",
+            "[INFO] data=[0 0], ground-truth=0, pred=0\n",
+            "[INFO] data=[0 1], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 0], ground-truth=1, pred=1\n",
+            "[INFO] data=[1 1], ground-truth=1, pred=1\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -159,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-PErebzuKrl",
-        "outputId": "7a464382-8c1a-4c98-9c44-9969f5f3ebaa"
+        "outputId": "ba95e656-8aae-48bd-a176-542cbd7ec156"
       },
       "source": [
         "# AND\n",
@@ -204,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OC5fG9m8uMD2",
-        "outputId": "7fe7456d-0c57-4cf5-e1ea-b20e2bff1b54"
+        "outputId": "f9a44d9b-2995-43ec-e424-dad0397a2a27"
       },
       "source": [
         "# construct the XOR dataset\n",
@@ -244,24 +249,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wbjtVSUTlGBd",
-        "outputId": "45010586-e817-46b9-9fc7-30da0d1f14f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FLTuyPG5Pv9W",
+        "outputId": "bef24731-ea0e-4822-feff-80fdd659afae"
       },
       "source": [
         "# construct the NAND dataset\n",
-        "A = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
-        "b = np.array([[1], [1], [1], [0]])\n",
-        "\n",
+        "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])\n",
+        "y = np.array([[1], [1], [1], [0]])\n",
+        "# define our perceptron and train it\n",
         "print(\"[INFO] training perceptron...\")\n",
-        "p = Perceptron(A.shape[1], alpha=0.1)\n",
+        "p = Perceptron(X.shape[1], alpha=0.1)\n",
+        "p.fit(X, y, epochs=20)\n",
         "\n",
-        "p.fit(A, b, epochs=20)\n",
+        "# now that our perceptron is trained we can evaluate it\n",
         "print(\"[INFO] testing perceptron...\")\n",
         "\n",
-        "for (x, target) in zip(A, b):\n",
+        "# now that our network is trained, loop over the data points\n",
+        "for (x, target) in zip(X, y):\n",
+        "    # make a prediction on the data point and display the result\n",
+        "    # to our console\n",
         "    pred = p.predict(x)\n",
         "    print(\"[INFO] data={}, ground-truth={}, pred={}\".format(x, target[0], pred))"
       ],
